--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
         
         <link rel='stylesheet' type='text/css' href='style.css'>
+        <script defer src='resize.js'></script>
     </head>
     <body>
+        <nav>
+            <b>Notas</b>
+            <button id='userData'>Usuario</>
+        </nav>
         <div id='allContainer'>
-            <nav>
-                <b>Notas</b>
-            </nav>
-            <aside>
-                <div>
+            <aside id='leftBar'>
+                <div id='leftBarTitle'>
                     <b>Todas tus notas</b>
-                    <button id='newNote'>+</button>
+                    <button id='newNote'><b>+</b></button>
                 </div>
                 <div id='notesList'>
                     <div class='noteInTheList'>
@@ -25,7 +27,6 @@
                             <span class=noteListText>
                                 Nota 1
                             </span>
-                            <img src='img/delete.png' class='deleteIcon'>
                         </button>
                     </div>
                     <div class='noteInTheList'>
@@ -33,7 +34,6 @@
                             <span class=noteListText>
                                 Nota 2
                             </span>
-                            <img src='img/delete.png' class='deleteIcon'>
                         </button>
                     </div>
                     <div class='noteInTheList'>
@@ -41,7 +41,6 @@
                             <span class=noteListText>
                                 Nota con un nombre quizás demasiado largo.
                             </span>
-                            <img src='img/delete.png' class='deleteIcon'>
                         </button>
                     </div>
                     <div class='noteInTheList'>
@@ -49,7 +48,6 @@
                             <span class=noteListText>
                                 Nota
                             </span>
-                            <img src='img/delete.png' class='deleteIcon'>
                         </button>
                     </div>
                 </div>
