--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,8 @@
         <link rel='stylesheet' type='text/css' href='css/textArea.css'>
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
 
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
         <script defer src='js/const.js'></script>
         <script defer src='js/resize.js'></script>
         <script defer src='js/floatingWindow.js'></script>
@@ -26,6 +28,7 @@
         <script defer src='js/text.js'></script>
         <script defer src='js/menu.js'></script>
         <script defer src='js/load.js'></script>
+        <script defer src='js/test.js'></script>
 
     </head>
     <body>
@@ -44,20 +47,22 @@
                 <p>
                     <section>
                         Nombre de usuario<br>
-                        <input type='text'>
+                        <input type='text' id='usernameField'>
                     </section>
                     <section>
                         Contraseña<br>
-                        <input type='password'><br>
+                        <input type='password' id='passwordField'><br>
                         <small><i><a>Olvidé mi contraseña</a></i></small>
                     </section>
                 </p>
                 <p>
                     <section>
-                        <button class='loginScreenButton1'>Iniciar sesión</button>
+                        <button class='loginScreenButton1' id='loginButton'>Iniciar sesión</button>
                     </section>
                     <section>
-                        <button class='loginScreenButton2'>Crear cuenta</button><br>
+                        <a href='singup.html'>
+                            <button class='loginScreenButton2' id='singUpButton'>Crear cuenta</button>
+                        </a><br>
                         <button id='localModeButton' class='loginScreenButton2'>Modo local</button>
                     </section>
                 </p>
@@ -87,7 +92,7 @@
                 <article id='noteSection'>
                     <section id='topBar'>
                         <span id='leftToTheNoteNameButtons'>
-                            <button class='bg-green' id='showNotesListButton'><img src='img/menu.png'></button>
+                            <button class='bg-green' id='showNotesListButton'><img src='http://idko.infinityfreeapp.com/notes/img/menu.png'></button>
                         </span>
                         <div id='topBarText'>
                             <b id='noteName'>Haz click sobre una nota.</b>
@@ -116,7 +121,7 @@
         </div>
         <div id='floatingMenu' hidden>
             <div id='menu'>
-                <h1 id='menuTitle'>Modo local<button id='closeMenuButton'>Cerrar</button></h1>
+                <h1 id='menuTitle'><button id='closeMenuButton'>Cerrar</button><span id='menuTitleText'>Modo local</span></h1>
                 <section id='menuButtons'>
                     <article>
                         <button id=menuExitLocalMode>
@@ -129,12 +134,22 @@
                         </button>
                     </article>
                     <article>
+                        <button id='menuOnlineLogOut'>
+                            Cerrar sesión
+                        </button>
+                    </article>
+                    <article>
+                        <button id='menuOnlineManageAccount'>
+                            Gestionar cuenta
+                        </button>
+                    </article>
+                    <article>
                         <button id='menuAbout'>
                             Acerca de notas
                         </button>
                     </article>
                 </section>
-            </b>
+            </div>
         </div>
     </body>
 </html>
