--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
         <link rel='stylesheet' type='text/css' href='css/textArea.css'>
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
 
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
         <script defer src='js/const.js'></script>
         <script defer src='js/resize.js'></script>
@@ -92,7 +92,7 @@
                 <article id='noteSection'>
                     <section id='topBar'>
                         <span id='leftToTheNoteNameButtons'>
-                            <button class='bg-green' id='showNotesListButton'><img src='http://idko.infinityfreeapp.com/notes/img/menu.png'></button>
+                            <button class='bg-green' id='showNotesListButton'><img src='img/menu.png'></button>
                         </span>
                         <div id='topBarText'>
                             <b id='noteName'>Haz click sobre una nota.</b>
