--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,8 +76,8 @@
             <div id='allContainer'>
                 <aside id='leftBar'>
                     <div id='leftBarTitle'>
-                        <b>Todas tus notas</b>
-                        <button id='newNote'><b>+</b></button>
+                        <b>Tus notas</b>
+                        <button id='newNote'>Crear</button>
                     </div>
                     <div id='newNoteField' hidden>
                         <div id='newNoteFieldDiv'>
