forzar modo local y más estabilidad en el servidor

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,6 +137,11 @@
                         </button>
                     </article>
                     <article>
+                        <button id='menuOnlineChangeToLocal'>
+                            Ver notas locales
+                        </button>
+                    </article>
+                    <article>
                         <button id='menuAbout'>
                             Acerca de notas
                         </button>
