los correos funcionan!!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
-        
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
         <link rel='stylesheet' type='text/css' href='css/style.css'>
         <link rel='stylesheet' type='text/css' href='css/load.css'>
         <link rel='stylesheet' type='text/css' href='css/login.css'>
@@ -60,7 +60,7 @@
                         <button class='loginScreenButton1' id='loginButton'>Iniciar sesión</button>
                     </section>
                     <section>
-                        <a href='singup.html'>
+                        <a href='signup.html'>
                             <button class='loginScreenButton2' id='singUpButton'>Crear cuenta</button>
                         </a><br>
                         <button id='localModeButton' class='loginScreenButton2'>Modo local</button>
