--- a/backend/emailPresets/signUpMail.html
+++ b/backend/emailPresets/signUpMail.html
@@ -71,7 +71,7 @@
             .ThingFootText
             {
                 font-family: 'Rubik', sans-serif;
-                font-size: 1rem;
+                font-size: 0.8rem;
                 text-align: center;
                 color: black;
                 background-color: #eeeeee;
@@ -93,7 +93,7 @@
             <b>Notas</b>
         </div>
         <h2 class=" ThingText">
-            Su código para crear su cuenta:
+            El código para crear su cuenta:
         </h2>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
