--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
         <script defer src='js/text.js'></script>
         <script defer src='js/menu.js'></script>
         <script defer src='js/load.js'></script>
-        <script defer src='js/test.js'></script>
+        <script defer src='js/cookies.js'></script>
 
     </head>
     <body>
@@ -38,6 +38,7 @@
                 <p id='loadingText'>Cargando...</p>
             </section>
         </div>
+
         <div id='loginScreen' hidden>
             <div id='loginScreenBigName'>
                 <b>Notas</b>
@@ -68,6 +69,7 @@
                 </p>
             </div>
         </div>
+
         <div id='noteScreen' hidden>
             <nav>
                 <b>Notas</b>
@@ -102,6 +104,7 @@
                 </article>
             </div>
         </div>
+
         <div id='floatingWindow' hidden>
             <div id='window'>
                 <h1 id='windowTitle'></h1>
@@ -112,6 +115,7 @@
                 <div id='windowButtons'></div>
             </div>
         </div>
+        
         <div id='floatingMenu' hidden>
             <div id='menu'>
                 <h1 id='menuTitle'><button id='closeMenuButton'>Cerrar</button><span id='menuTitleText'>Modo local</span></h1>
