--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -10,7 +10,7 @@
         <link rel='stylesheet' type='text/css' href='css/signUp.css'>
 
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script defer src="js/signUp.js"></script>
+        <script defer src="js/signUp/signUp.js"></script>
     </head>
     <body>
         <article>
