modificar los datos de la cuenta

--- a/backend/emailPresets/updateDataMail.html
+++ b/backend/emailPresets/updateDataMail.html
@@ -17,15 +17,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet"> 
         <style>
-            .ThingContainer
-            {
-                --green: #53b56a;
-                --green-hover: #479b5b;
-                --gray: #eeeeee;
-                --rubik: 'Rubik', sans-serif;
-            }
-
             .loginScreenBigName
             {
                 font-size: 4rem;
@@ -65,7 +58,7 @@
                 font-family: #53b56a;
                 text-align: center;
                 color: white;
-                font-family: 'Rubik', sans-serif;
+                font-family: 'Anonymous Pro', monospace;
             }
 
             .ThingFootText
@@ -81,6 +74,18 @@
                 word-wrap: break-word;
             }
 
+            .ThingData
+            {
+                font-family: 'Rubik', sans-serif;
+                font-size: 1rem;
+                text-align: center;
+                color: #000000;
+                background-color: #eeeeee;
+                border-radius: 10px;
+                padding: 0.7rem;
+                margin: 0.5rem;
+            }
+
             a
             {
                 color: #53b56a;
@@ -93,15 +98,39 @@
             <b>Notas</b>
         </div>
         <h2 class=" ThingText">
-            El código para crear su cuenta:
+            Modificar datos de su cuenta
         </h2>
+        <div class=" ThingData">
+            Los datos de su cuenta serán actualizados y quedarán de la siguiente manera:
+            <div>
+                <p>
+                    <h2>
+                        Nombre de usuario
+                    </h2>
+                    <div><b>{USERNAME_HERE}</b></div>
+                </p>
+                <p>
+                    <h2>
+                        Correo electrónico
+                    </h2>
+                    <div><b>{EMAIL_HERE}</b></div>
+                </p>
+                <p>
+                    <h2>
+                        Contraseña
+                    </h2>
+                    <div><b>{PASSWORD_HERE}</b></div>
+                </p>
+                Para confirmar los cambios, introduzca el código de abajo en la aplicación.
+            </div>
+        </div>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
                 <b>{CODE_HERE}</b>
             </span>
         </div>
         <div class=" ThingFootText">
-            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar la creación de una cuenta de usuario. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
+            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar el cambio de los datos mostrados anteriormente en una cuenta de usuario. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
         </div>
         </div>
     </body>
