--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -82,7 +82,7 @@
                         </section>
                         <section>
                             <h2>Ingresa el código</h2>
-                            <p><input type="text" id="changeDataConfirmCode" placeholder="A1B2C"></p>
+                            <p><input type="text" id="changeDataConfirmCode" placeholder="A1B2C" maxlength="5"></p>
                             <button class="greenButton" id="changeDataConfirmCodeButton">Comprobar</button>
                         </section>
                     </p>
