antes de reemplazar todo el frontend con textos cambiables

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,9 +18,10 @@
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
         <script defer src='js/const.js'></script>
+        <script defer src='js/localStorage.js'></script>
+        <script defer src='js/language.js'></script>
         <script defer src='js/resize.js'></script>
         <script defer src='js/floatingWindow.js'></script>
-        <script defer src='js/localStorage.js'></script>
         <script defer src='js/loadNotesList.js'></script>
         <script defer src='js/login.js'></script>
         <script defer src='js/newNote.js'></script>
@@ -34,7 +35,7 @@
     <body>
         <div id=loadingScreen>
             <section>
-                <b>Notas</b>
+                <b><span class='text' txt="noteAppName">Notas</span></b>
                 <p id='loadingText'>Cargando...</p>
             </section>
         </div>
