algunas cosas con el idioma y hash.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
         <script defer src='js/const.js'></script>
+        <script defer src='js/hash.js'></script>
         <script defer src='js/localStorage.js'></script>
         <script defer src='js/language.js'></script>
         <script defer src='js/resize.js'></script>
@@ -70,11 +71,10 @@
                         </button>
                     </section>
                     <section>
-                        <a href='signup.html'>
-                            <button class='loginScreenButton2' id='singUpButton'>
-                                <span class="text" txt="createAccount">Crear cuenta</span>
-                            </button>
-                        </a><br>
+                        <button class='loginScreenButton2' id='signUpButton'>
+                            <span class="text" txt="createAccount">Crear cuenta</span>
+                        </button>
+                        <br>
                         <button id='localModeButton' class='loginScreenButton2'>
                             <span class="text" txt="localMode">Modo local</span>
                         </button>
