--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -38,7 +38,7 @@
                             <button class='greenButton' id="toChangeDataMenuButton">Modificar estos datos</button>
                         </section>
                         <section>
-                            <button class="greenButton">Cambiar idioma (language)</button>
+                            <button class="greenButton" id="changeLanguage">Cambiar idioma (language)</button>
                         </section>
                         <section>
                             <button class="greenButton">Ver quién tiene acceso a esta cuenta</button>
