--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -132,7 +132,7 @@
         <div id=loadingScreen>
             <section>
                 <b class="text" txt="noteAppName">Notas</b>
-                <p id='loadingText' class="text" txt="loading">Cargando...</p>
+                <p id='loadingText' class="text" txt="loading">Loading the load screen...</p>
             </section>
         </div>
 
