--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,8 +36,8 @@
     <body>
         <div id=loadingScreen>
             <section>
-                <b><span class='text' txt="noteAppName">Notes</span></b>
-                <p id='loadingText'><span class='text' txt="loading">Loading the load screen...</span></p>
+                <b><span class='text' txt="noteAppName">Notas</span></b>
+                <div><img src="img/load.svg" id="loadingIcon"></div>
             </section>
         </div>
 
