--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -131,8 +131,8 @@
 
         <div id=loadingScreen>
             <section>
-                <b class="text" txt="noteAppName">Notas</b>
-                <p id='loadingText' class="text" txt="loading">Loading the load screen...</p>
+                <b><span class='text' txt="noteAppName">Notas</span></b>
+                <div><img src="img/load.svg" id="loadingIcon"></div>
             </section>
         </div>
 
