--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
         <link rel='stylesheet' type='text/css' href='css/leftBar.css'>
         <link rel='stylesheet' type='text/css' href='css/textArea.css'>
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
+        <link rel="shorcut icon" type="image/svg" href="img/favicon.svg">
 
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
