--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -7,6 +7,7 @@
         <link rel='stylesheet' type='text/css' href='css/load.css'>
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
         <link rel='stylesheet' type='text/css' href='css/manageAccount.css'>
+        <link rel="shorcut icon" type="image/svg" href="img/favicon.svg">
 
         <script>let titleTextIDLang = 'manageAccountNotes';</script>
         <script defer src="js/hash.js"></script>
