--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -8,6 +8,7 @@
 
         <link rel='stylesheet' type='text/css' href='css/style.css'>
         <link rel='stylesheet' type='text/css' href='css/signUp.css'>
+        <link rel="shorcut icon" type="image/svg" href="img/favicon.svg">
 
         <script>const titleTextIDLang = 'createAccountNotes';</script>
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
