--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,9 @@
                             </span>
                         </div>
                     </section>
-                    <textarea id='noteField' disabled></textarea>
+                    <div id="textAreaContainer">
+                        <textarea id='noteField' disabled></textarea>
+                    </div>
                 </article>
             </div>
         </div>
@@ -150,6 +152,11 @@
                     <article>
                         <button id=menuExitLocalMode class="text" txt="menu_exitLocalMode">
                             Salir de modo local
+                        </button>
+                    </article>
+                    <article>
+                        <button id="menuChangeLanguage" class="text" txt="changeLanguage2">
+                            Idioma
                         </button>
                     </article>
                     <article>
