--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -30,6 +30,10 @@
                     <h1 class="text" txt="manageAccount">Gestionar cuenta</h1>
                     <p>
                         <section>
+                            <button class="greenButton text" id="toChangeLanguageMenuButton" txt="changeLanguage2">Cambiar idioma (language)</button>
+                            <button class="greenButton">Modo oscuro</button>
+                        </section>
+                        <section>
                             <p>
                                 <span class="text" txt="username">Nombre de usuario</span>:<br>
                                 <b><span id='usernameSpace'></span></b>
@@ -45,13 +49,7 @@
                             <button class='greenButton text' id="toChangeDataMenuButton" txt="modifyThisData">Modificar estos datos</button>
                         </section>
                         <section>
-                            <button class="greenButton text" id="toChangeLanguageMenuButton" txt="changeLanguage2">Cambiar idioma (language)</button>
-                        </section>
-                        <section>
-                            <button class="greenButton text" txt="whoCanAccess">Ver quién tiene acceso a esta cuenta</button>
                             <button class='greenButton text' id="logOutInAllMenuButton" txt="logOutInAll">Cerrar sesión en todos los dispositivos</button>
-                        </section>
-                        <section>
                             <button class='greenButton text' txt="deleteAllNotes">Borrar todas las notas</button>
                             <button class='greenButton text' txt="deleteAccount">Eliminar cuenta</button>
                         </section>
